--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "hjs_vue_h5",
-  "version": "1.0.0",
+  "version": "1.0.7",
   "description": "A Vue.js project",
   "author": "Administrator <landjj321@126.com>",
   "private": false,
+  "main": "./dist/hjs_vue_h5.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
@@ -14,6 +15,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "animate.css": "^3.7.0",
+    "mint-ui": "^2.2.13",
+    "normalize.css": "^8.0.1",
+    "vant": "^1.6.9",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -54,6 +59,7 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -61,9 +67,11 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^7.1.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
